--- a/build.gradle
+++ b/build.gradle
@@ -25,15 +25,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'com.google.code.gson:gson:2.10.1'
-    //implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
-    //runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    //runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
     annotationProcessor 'org.projectlombok:lombok'
     //testImplementation 'org.springframework.boot:spring-boot-starter-test'
     //testImplementation 'org.springframework.security:spring-security-test'
@@ -41,4 +36,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(Test) {
+    enabled = false
 }
