--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
+server:
+  port: 9001
+
 spring:
   application:
-    name: backend
+    name: tickethub-backend
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/tickethub_db?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: wjdekdms0814
-#    hikari:
-#      connection-timeout: 2000 #ms
-#      maximum-pool-size: 5
   sql:
     init:
       mode: always
@@ -17,20 +17,9 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: create
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    defer-datasource-initialization: true
     show-sql: true
+    # generate-ddl: true
     properties:
       hibernate.format_sql: true
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
-    defer-datasource-initialization: true
-
-server:
-  port: 9001
-
-logging:
-  level:
-    org:
-      springframework:
-        security:
-          web: trace
