--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
       ddl-auto: create
     defer-datasource-initialization: true
     show-sql: true
-    # generate-ddl: true
+    generate-ddl: true
     properties:
       hibernate.format_sql: true
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
